logs/Slang/generic/enum/enum_test_0.sv.log
name: enum_test_0
description: Test
should_fail: 0
tags: 6.19
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/enum/enum_test_0.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/enum/enum_test_0.sv:7:14: error: forward typedef 'myenum_fwd' does not resolve to a data type
typedef enum myenum_fwd;
             ^
